# gstack

./: Cargo.toml  Readme.md
.github/workflows/: deploy.yml  publish-to-homebrew.yml  publish.yml  release.yml
src/: command.rs  config.rs  main.rs  repo_extensions.rs  state.rs
