[package]
name = "gstack"
version = "0.0.21"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.11", features = ["derive"] }
console = "0.15.8"
dialoguer = "0.11.0"
indicatif = "0.17.8"
octocrab = "0.38.0"
ron = "0.8.1"
toml = "0.8.16"
rustygit = "0.5.0"
regex = "1.10.5"
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
